--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.50.2",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.9",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
