--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.50.2",
     "canvas-confetti": "^1.9.3",
-    "chart.js": "^4.4.9",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
